<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.FormCadastro">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="18sp"
            android:textColor="@color/red"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"

            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/help_registration"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="120dp"
            android:textAllCaps="true"

            />
        <TextView
            android:id="@+id/txtEnter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="20dp"
            android:textAllCaps="true"

            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tudo_pronto_para_n_para_assistir"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/informe_seu_email_para_criar_ou_acessar_sua_conta"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ContainerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/light_gray"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ContainerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:helperTextEnabled="true"
        app:helperTextTextColor="@color/red"
        style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
        app:boxStrokeColor="@color/blue"
        app:hintTextColor="@color/light_gray"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/EditPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="numberPassword"
            android:padding="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="20dp"
            />

    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:padding="15dp"
        android:backgroundTint="@color/red"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        app:cornerRadius="8dp"
        />

</LinearLayout>